# icicle

./: .gitignore  Cargo.toml  build.rs  build.sh  profile.sh
appl/: Cargo.toml
appl/src/: lib.rs  main.rs
benches/: ntt.rs
bn254/src/basic_structs/: point.rs
curve_parameters/: bn254.json  new_curve_script.py
goicicle/curves/bls12377/: ntt_test.go
goicicle/curves/bls12377/include/: msm.h  ntt.h
goicicle/curves/bls12381/: msm_test.go  ntt_test.go
goicicle/curves/bls12381/include/: msm.h  (+1 more)
goicicle/curves/bn254/: msm_test.go
goicicle/templates/hfiles/: msm.h.tmpl  ntt.h.tmpl  ve_mod_mult.h.tmpl
icicle-bls12-381/: Cargo.toml  build.rs
icicle-bls12-381/src/: lib.rs
icicle-bn254/: Cargo.toml  build.rs
icicle-bn254/src/: lib.rs
icicle-core/: Cargo.toml  build.rs
icicle-core/benches/: msm.rs  ntt.rs
icicle-core/icicle/: CMakeLists.txt
icicle-core/icicle/appUtils/: smth.cu  vec_subtract.cu
icicle-core/icicle/curves/: bls12_381.cuh  bn254.cuh  curve_config.cuh
icicle-core/icicle/primitives/: extension_field.cuh  field.cuh  projective.cu  test.cu  test_kernels.cuh
icicle-core/src/: field.rs  lib.rs  test_field.rs  tst.rs
icicle-core/src/basic_structs/: curve.rs  mod.rs  point.rs  scalar.rs
icicle/appUtils/msm/: msm.cu
icicle/appUtils/ntt/: kern.asm  kern_r40.asm  lde.cu  lde.cuh  ntt.cuh
icicle/appUtils/poseidon/: opt_poseidon.cu  opt_poseidon.cuh  poseidon.cu  poseidon.cuh  poseidon_test.cu
icicle/appUtils/tree/: test_bls12_381.cu  test_f251.cu
icicle/appUtils/vector_manipulation/: ve_mod_mult.cuh
icicle/curves/: index.cu
icicle/curves/bls12_377/: lde.cu  msm.cu  params.cuh
icicle/curves/bls12_381/: lde.cu  memoryleak.txt  msm.cu  params.cuh  poseidon.cu  pp.txt  projective.cu  ve_mod_mult.cu
icicle/curves/bn254/: Makefile  lde.cu  msm.cu  params.cuh
icicle/curves/curve_template/: lde.cu.tmpl  msm.cu  msm.cu.tmpl  params.cuh.tmpl
icicle/curves/f251/: merkle.cu  opt_poseidon.cu  poseidon.cu
icicle/primitives/: field.cuh  projective.cu
icicle/utils/: cuda_utils.cuh  errors.cuh  mont.cuh  sharedmem.cuh  tr  tr.cu  tr.cuh
src/: lib.rs  main.rs  test_bls12_381.rs  test_bn254.rs
src/curves/: bn254.rs  mod.rs
test_bn254/: Cargo.toml
test_bn254/src/: lib.rs
(+21 files in other folders)
